engine start fix, naming

--- a/trt.ipynb
+++ b/trt.ipynb
@@ -61,8 +61,6 @@
     "#export\n",
     "import sys\n",
     "import os\n",
-    "import logging\n",
-    "from itertools import chain\n",
     "\n",
     "import pycuda.driver as cuda\n",
     "import pycuda.autoinit\n",
@@ -93,7 +91,7 @@
    "source": [
     "#export\n",
     "EXPLICIT_BATCH = 1 << (int)(trt.NetworkDefinitionCreationFlag.EXPLICIT_BATCH)\n",
-    "def GiB(val): return val * 1 << 30\n"
+    "def GiB(val): return val * 1 << 30"
    ]
   },
   {
@@ -157,13 +155,29 @@
     "    trt_logger = trt.Logger(trt.Logger.INFO)\n",
     "    trt.init_libnvinfer_plugins(trt_logger, '')\n",
     "    runtime = trt.Runtime(trt_logger)\n",
-    "    return trt_logger, runtime"
+    "    return trt_logger, runtime\n",
+    "\n",
+    "def do_inference(context, bindings, inputs, outputs, stream, batch_size=1, explicit_batch=False):\n",
+    "    [inp.htod(stream) for inp in inputs]\n",
+    "    context_exec = context.execute_async_v2 if explicit_batch else context.execute_async\n",
+    "    context_exec(batch_size=batch_size, bindings=bindings, stream_handle=stream.handle)\n",
+    "    [out.dtoh(stream) for out in outputs]\n",
+    "    stream.synchronize()\n",
+    "    return [out.h for out in outputs]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 25,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-09-16T10:48:16.098637Z",
+     "iopub.status.busy": "2020-09-16T10:48:16.098385Z",
+     "iopub.status.idle": "2020-09-16T10:48:16.141973Z",
+     "shell.execute_reply": "2020-09-16T10:48:16.141447Z",
+     "shell.execute_reply.started": "2020-09-16T10:48:16.098611Z"
+    }
+   },
    "outputs": [],
    "source": [
     "#export\n",
@@ -171,6 +185,7 @@
     "    def __init__(self, host_mem, device_mem):\n",
     "        self.h = host_mem\n",
     "        self.d = device_mem\n",
+    "        #self.name\n",
     "\n",
     "    def __str__(self):   return \"Host:\\n\" + str(self.h) + \"\\nDevice:\\n\" + str(self.d)\n",
     "    def __repr__(self):  return self.__str__()\n",
@@ -198,6 +213,7 @@
     "    bindings = []\n",
     "    stream = cuda.Stream()\n",
     "    for i, binding in enumerate(engine):\n",
+    "        bind_name = engine.get_binding_name(i)\n",
     "        size = trt.volume(engine.get_binding_shape(binding)) * engine.max_batch_size\n",
     "        if dtypes is not None: \n",
     "            dtype = dtypes[i]\n",
@@ -208,36 +224,14 @@
     "        device_mem = cuda.mem_alloc(host_mem.nbytes)\n",
     "        bindings.append(int(device_mem))\n",
     "        \n",
-    "        if engine.binding_is_input(binding):\n",
-    "            inputs.append(HostDeviceMem(host_mem, device_mem))\n",
-    "        else:\n",
-    "            outputs.append(HostDeviceMem(host_mem, device_mem))\n",
+    "        mem = HostDeviceMem(host_mem, device_mem)\n",
+    "        mem.name = bind_name\n",
+    "        \n",
+    "        if engine.binding_is_input(binding): inputs.append(mem)\n",
+    "        else: outputs.append(mem)\n",
+    "            \n",
     "    return inputs, outputs, bindings, stream\n",
     "\n",
-    "\n",
-    "def do_inference(context, bindings, inputs, outputs, stream, batch_size=1, explicit_batch=False):\n",
-    "    [inp.htod(stream) for inp in inputs]\n",
-    "    context_exec = context.execute_async_v2 if explicit_batch else context.execute_async\n",
-    "    context_exec(batch_size=batch_size, bindings=bindings, stream_handle=stream.handle)\n",
-    "    [out.dtoh(stream) for out in outputs]\n",
-    "    stream.synchronize()\n",
-    "    return [out.h for out in outputs]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-09-15T16:12:23.782915Z",
-     "iopub.status.busy": "2020-09-15T16:12:23.782683Z",
-     "iopub.status.idle": "2020-09-15T16:12:23.816515Z",
-     "shell.execute_reply": "2020-09-15T16:12:23.815972Z",
-     "shell.execute_reply.started": "2020-09-15T16:12:23.782889Z"
-    }
-   },
-   "outputs": [],
-   "source": [
     "#export\n",
     "class BaseEngine:\n",
     "    \"\"\"Base engine class\n",
@@ -259,24 +253,20 @@
     "        self.context = self.engine.create_execution_context()\n",
     "        dtypes = self.config.get('dtypes', None)\n",
     "        self.inputs, self.outputs, self.bindings, self.stream = allocate_buffers(self.engine, dtypes=dtypes)\n",
-    "    \n",
+    "        self.output_shapes = [self.engine.get_binding_shape(i) for i in range(self.engine.num_bindings) if not self.engine.binding_is_input(i)]\n",
+    "        \n",
     "    def sync(self): self.stream.synchronize()\n",
     "\n",
     "    def info(self):\n",
-    "        print([self.engine.get_binding_name(i) for i in range(self.engine.num_bindings)])\n",
-    "        print([self.engine.get_binding_shape(i) for i in range(self.engine.num_bindings)])\n",
-    "        print([self.engine.get_binding_dtype(i) for i in range(self.engine.num_bindings)])\n",
+    "        for i in range(self.engine.num_bindings):\n",
+    "            print(self.engine.get_binding_name(i), self.engine.get_binding_shape(i), self.engine.get_binding_dtype(i))\n",
     "        \n",
     "    def execute(self, bindings, sync=True):\n",
     "        self.context.execute_async(bindings=bindings, stream_handle=self.stream.handle)\n",
     "        if sync: self.sync()\n",
     "    \n",
     "    def load_input(self, inp):\n",
-    "        \"\"\"\n",
-    "        inp is 4D tensor or list of 3D tensors\n",
-    "        \"\"\"\n",
-    "        #assert isinstance(inp, list), 'input must be a list'\n",
-    "        \n",
+    "        #inp is 4D tensor or list of 3D tensors\n",
     "        for i, inputs in zip(inp, self.inputs):\n",
     "            np.copyto(inputs.h, i.ravel())\n",
     "    \n",
@@ -289,18 +279,11 @@
     "        if sync: self.sync()\n",
     "        \n",
     "    def _start(self):\n",
-    "        self.dtoh(sync=True)\n",
-    "        self.execute(self.bindings)\n",
     "        self.htod(sync=True)\n",
-    "        return [out.h for out in self.outputs]"
+    "        self.execute(self.bindings)\n",
+    "        self.dtoh(sync=True)\n",
+    "        return {o.name:o.h.reshape(s) for o, s in zip(self.outputs, self.output_shapes)}"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -373,6 +356,13 @@
    "source": [
     "e._start()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
