stream for buffer allocation

--- a/trt.ipynb
+++ b/trt.ipynb
@@ -189,16 +189,11 @@
     "\n",
     "    def __str__(self):   return \"Host:\\n\" + str(self.h) + \"\\nDevice:\\n\" + str(self.d)\n",
     "    def __repr__(self):  return self.__str__()\n",
-    "    \n",
-    "    def htod(self, stream):\n",
-    "        cuda.memcpy_htod_async(self.d, self.h, stream)\n",
-    "        #stream.synchronize()\n",
+    "    def htod(self, stream): cuda.memcpy_htod_async(self.d, self.h, stream)\n",
+    "    def dtoh(self, stream): cuda.memcpy_dtoh_async(self.h, self.d, stream)\n",
     "        \n",
-    "    def dtoh(self, stream):\n",
-    "        cuda.memcpy_dtoh_async(self.h, self.d, stream)\n",
-    "        #stream.synchronize()\n",
     "        \n",
-    "def allocate_buffers(engine, dtypes=None):\n",
+    "def allocate_buffers(engine, dtypes=None, stream=None):\n",
     "    \"\"\"\n",
     "    Args:\n",
     "        engine (trt.ICudaEngine): TensorRT engine\n",
@@ -211,14 +206,12 @@
     "    inputs = []\n",
     "    outputs = []\n",
     "    bindings = []\n",
-    "    stream = cuda.Stream()\n",
+    "    if stream is None: stream = cuda.Stream()\n",
     "    for i, binding in enumerate(engine):\n",
     "        bind_name = engine.get_binding_name(i)\n",
     "        size = trt.volume(engine.get_binding_shape(binding)) * engine.max_batch_size\n",
-    "        if dtypes is not None: \n",
-    "            dtype = dtypes[i]\n",
-    "        else:\n",
-    "            dtype = trt.nptype(engine.get_binding_dtype(binding))\n",
+    "        if dtypes is not None: dtype = dtypes[i]\n",
+    "        else: dtype = trt.nptype(engine.get_binding_dtype(binding))\n",
     "        \n",
     "        host_mem = cuda.pagelocked_empty(size, dtype)\n",
     "        device_mem = cuda.mem_alloc(host_mem.nbytes)\n",
@@ -256,7 +249,7 @@
     "        self.output_shapes = [self.engine.get_binding_shape(i) for i in range(self.engine.num_bindings) if not self.engine.binding_is_input(i)]\n",
     "        \n",
     "    def sync(self): self.stream.synchronize()\n",
-    "\n",
+    "    \n",
     "    def info(self):\n",
     "        for i in range(self.engine.num_bindings):\n",
     "            print(self.engine.get_binding_name(i), self.engine.get_binding_shape(i), self.engine.get_binding_dtype(i))\n",
