moved stream out of alloc

--- a/trt.ipynb
+++ b/trt.ipynb
@@ -193,7 +193,7 @@
     "    def dtoh(self, stream): cuda.memcpy_dtoh_async(self.h, self.d, stream)\n",
     "        \n",
     "        \n",
-    "def allocate_buffers(engine, dtypes=None, stream=None):\n",
+    "def allocate_buffers(engine, dtypes=None):\n",
     "    \"\"\"\n",
     "    Args:\n",
     "        engine (trt.ICudaEngine): TensorRT engine\n",
@@ -201,12 +201,10 @@
     "        inputs [HostDeviceMem]: engine input memory\n",
     "        outputs [HostDeviceMem]: engine output memory\n",
     "        bindings [int]: buffer to device bindings\n",
-    "        stream (cuda.Stream): cuda stream for engine inference synchronization\n",
     "    \"\"\"\n",
     "    inputs = []\n",
     "    outputs = []\n",
     "    bindings = []\n",
-    "    if stream is None: stream = cuda.Stream()\n",
     "    for i, binding in enumerate(engine):\n",
     "        bind_name = engine.get_binding_name(i)\n",
     "        size = trt.volume(engine.get_binding_shape(binding)) * engine.max_batch_size\n",
@@ -223,7 +221,7 @@
     "        if engine.binding_is_input(binding): inputs.append(mem)\n",
     "        else: outputs.append(mem)\n",
     "            \n",
-    "    return inputs, outputs, bindings, stream\n",
+    "    return inputs, outputs, bindings\n",
     "\n",
     "#export\n",
     "class BaseEngine:\n",
@@ -245,7 +243,8 @@
     "        self.engine = load_engine(self.runtime, self.config['engine'])\n",
     "        self.context = self.engine.create_execution_context()\n",
     "        dtypes = self.config.get('dtypes', None)\n",
-    "        self.inputs, self.outputs, self.bindings, self.stream = allocate_buffers(self.engine, dtypes=dtypes)\n",
+    "        self.stream = cuda.Stream()\n",
+    "        self.inputs, self.outputs, self.bindings = allocate_buffers(self.engine, dtypes=dtypes)\n",
     "        self.output_shapes = [self.engine.get_binding_shape(i) for i in range(self.engine.num_bindings) if not self.engine.binding_is_input(i)]\n",
     "        \n",
     "    def sync(self): self.stream.synchronize()\n",
