asyncv2, trt warning

--- a/trt.ipynb
+++ b/trt.ipynb
@@ -246,6 +246,8 @@
     "        self.stream = cuda.Stream()\n",
     "        self.inputs, self.outputs, self.bindings = allocate_buffers(self.engine, dtypes=dtypes)\n",
     "        self.output_shapes = [self.engine.get_binding_shape(i) for i in range(self.engine.num_bindings) if not self.engine.binding_is_input(i)]\n",
+    "        self.input_shapes = [self.engine.get_binding_shape(i) for i in range(self.engine.num_bindings) if self.engine.binding_is_input(i)]\n",
+    "        \n",
     "        \n",
     "    def sync(self): self.stream.synchronize()\n",
     "    \n",
@@ -254,7 +256,8 @@
     "            print(self.engine.get_binding_name(i), self.engine.get_binding_shape(i), self.engine.get_binding_dtype(i))\n",
     "        \n",
     "    def execute(self, bindings, sync=True):\n",
-    "        self.context.execute_async(bindings=bindings, stream_handle=self.stream.handle)\n",
+    "        #self.context.execute_async(bindings=bindings, stream_handle=self.stream.handle)\n",
+    "        self.context.execute_async_v2(bindings=bindings, stream_handle=self.stream.handle)\n",
     "        if sync: self.sync()\n",
     "    \n",
     "    def load_input(self, inp):\n",
